--- a/app/views/layouts/shared/_navbar.html.erb
+++ b/app/views/layouts/shared/_navbar.html.erb
@@ -15,8 +15,10 @@
 					<% unless user_signed_in? %>
 						<li><%= link_to 'Principal', root_path  %></li>
 					<% end %>
-					<li class="<%= is_section_active?('trips') %>"><%= link_to 'Pasea', trips_path  %></li>
-					<li class="<%= is_section_active?('maps') %>"><%= link_to 'Mapa', maps_path %></li>
+					<li class="<%= is_section_active?('trips') || is_section_active?('cycling_groups') %>">
+						<%= link_to 'Descubre', discover_trips_path  %>
+					</li>
+					<li class="<%= is_section_active?('maps') %>"><%= link_to 'El Wiki', maps_path %></li>
 					<li class="<%= 'active' if controller.controller_name.eql?('bikes') %>"><%= link_to 'Bicis y Más', bikes_path %></li>
 					<%= render 'layouts/shared/navbar_logged_in_user' %>
 				</ul>
