--- a/app/assets/stylesheets/trips.css.scss
+++ b/app/assets/stylesheets/trips.css.scss
@@ -2,185 +2,366 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+
 $wikicleta_orange: #fb4e15;
 $wikicleta_blue: #1f3a50;
 $wikicleta_light_blue: #DFEEF6;
 
+html, body {
+    height:100%;
+}
+
+#content
+{
+    width: 50%;
+    position: absolute;
+    z-index: 1;
+    top:0;
+    left:0 !important;
+		pointer-events: none;
+		
+	.panel {
+		pointer-events: auto;
+		background-color: rgba(255,255,255,0.5);
+		-moz-box-shadow: 0 0 1px #ADBBC5;
+		-webkit-box-shadow: 0 0 1px #ADBBC5;
+		box-shadow: 0 0 1px #ADBBC5;
+		padding: 10px;
+		border-radius: 0px 0px 5px 0px;
+		margin-bottom: 30px;
+		
+		.inner-panel-big {
+			margin-top: 10px;
+		}
+		
+		.inner-panel-small {
+			margin-top: 40px;
+			min-height: 40px;
+		}
+		
+		.inner-panel {
+			border: 0.5px solid #CED7E8 !important;
+			border-radius: 5px;
+			background-color: white;
+			
+			.empty-listing {
+				margin-left: 100px;
+				
+				.suggest {
+					margin-top: 40px;
+					font-size: 20px;
+					color: $wikicleta_orange;
+					margin-bottom: 40px;
+					
+					.blue {
+						color: $wikicleta_blue;
+					}
+				}
+			}
+			
+			.listing-actions {
+				display: none;
+				padding: 20px 10px 10px 0px !important;
+				text-align: right !important;
+				a {
+					color: $wikicleta_orange;
+					text-decoration: none;
+				}
+			}
+			
+			.activities {
+				padding-top: 20px;
+				
+				.results {
+					margin-right: 18px;
+					text-align: right;
+					color: #9DA2B5;
+					margin-bottom: 15px;
+				}
+
+				
+				.items {
+					ul.sub-actions {
+						list-style: none;
+						li {
+							display: inline-block;
+							margin-right: 10px;
+							padding-bottom: 0px !important;
+							margin-bottom: 0px !important;
+						}
+						
+						
+						.activity {
+							padding-right: 10px;
+
+							p {
+								text-align: right;
+								font-size: 13px;
+								margin:0px;
+								margin-bottom: 5px;
+								color: #BCBCBC;
+								
+							}
+
+
+							.numeric {
+								font-weight: bold;
+								font-size: 30px;
+								color: #BCBCBC;
+							}
+						}
+						
+						li.active a {
+							.numeric {
+								color: $wikicleta_orange !important;
+							}
+							
+							.kind {
+								color: $wikicleta_blue;
+							}
+						}
+					}
+
+					
+					a:hover {
+						text-decoration: none;
+						color: $wikicleta_orange !important;
+					}
+					display: inline-block;
+				}
+			}
+
+			.content {
+				padding: 0px 0px 10px 0px !important;
+			}
+			
+			.actions-bar {
+				padding-top: 8px;
+				
+				.call-to-act {
+					display: inline-block;
+					padding-top: 4px;
+					font-size: 15px;
+					color: $wikicleta_orange;
+					margin-right: 10px;
+					margin-left: 10px;
+				}
+			}
+			
+			.spinner {
+				margin-right: 10px;
+				display: none;
+			}
+		}
+		
+
+	}
+}
+
+#map-container {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 0;
+}
+
+#map
+{
+    width: 100%;
+    height: 100%;
+}
+
+.btn {
+	a {
+		color: white;
+	}
+}
+
+.rounded {
+	border:1px solid white;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+}
+
+.section {
+	margin-bottom: 20px;
+	h3 {
+		color: #1064C2;
+		
+		.extra {
+			font-size: 12px;
+			color: $wikicleta_orange;
+			text-transform: uppercase;
+		}
+	}
+}
+
+.cycling-group {
+	font-family: 'Gotham Rounded';
+	margin-bottom: 10px;
+	p {
+		padding: 0px;
+		margin: 0px;
+	}
+	
+	.logo-container {
+		margin-top: 20px;
+		margin-bottom: 20px;
+	}
+	
+	.details {
+		padding: 10px;
+
+		
+		.name {
+			font-size: 18px;
+			margin-bottom: 10px;
+		}
+		
+		.info {
+			font-size: 10px;
+			font-weight: 300;
+		}
+		
+		.timings {
+			margin-top: 10px;
+			font-size: 10px;
+			
+			.verb {
+				color: $wikicleta_blue;
+			}
+		}
+	}
+	
+	.contact {
+		font-size: 13px;
+		padding: 5px;
+		.contact-channel {
+			
+			a {
+				color: $wikicleta_blue;
+				text-decoration: none;
+			}
+		}
+		
+		.contact-channel:hover {
+			a {
+				color: #0850FF;
+			}
+			border-radius: 5px;
+			background-color: #E5EAFF;
+		}
+	}
+	
+	.separator {
+		height: 0.5px !important;
+		background-color: $wikicleta_light_blue;
+	}
+}
+
+.trip-list {
+	margin-top: 40px !important;
+	
+	.with-focus {
+		border: none !important;
+	}
+	
+	.trip:hover {
+		background-color: rgba(32,59,80,0.1);
+	}
+	
+	.trip {
+		.closer {
+			width: 100px;
+			height: 100px;
+			background-color: black;
+			position: fixed;
+			left: 830px;
+			top: 180px;
+		}
+		
+		border-top: 0.5px solid rgba(32,59,80,0.1);
+		
+		padding: 10px 20px 10px 0px;
+		margin: 0px 0px 0px 0px;
+		
+		.details {
+			padding: 10px 10px 3px 10px;
+			text-align: right;
+			margin-left: 60px;
+			.event-name, .days-to-event {
+				a {
+					color: $wikicleta_blue;
+					text-decoration: none;
+					font-weight: 400;
+				}
+				color: $wikicleta_blue;
+
+				font-weight: 100;
+				margin: 0px !important;
+				padding: 0px !important;
+				font-family: 'Gotham Rounded';
+			}
+
+			.event-name {
+				font-size: 20px;
+			}
+
+			.days-to-event {
+				font-size: 11px;
+			}
+
+			.event-timings {
+				font-size: 10px;
+				color: $wikicleta_orange;
+
+				margin-bottom: 0px !important;
+			}
+		}
+		
+		.extras {
+			display: none;
+			
+			.categories-menu {
+				margin-top: 20px;
+				margin-bottom: 0px;
+				text-align: right;
+				
+				ul {
+					list-style-type: none !important;
+					margin-left: auto;
+					margin-right: auto;
+
+					li.enabled:hover, li.active {
+						background-color: #E6E6E6;
+					}
+
+					li {
+						padding: 5px 10px 5px 10px;
+						display: inline-block !important;
+						margin-right: 10px;
+						margin-left: 10px;
+						font-size: 11px;
+
+						a {
+							text-decoration: none;
+							color: $wikicleta_blue;
+						}
+					}
+				}
+		}
+
+	}
+	
+}
+
+
 .dropdown-menu {
 	li {
 		width: 100%;
-	}
-}
-
-.rides {
-	
-	.box:hover {
-		.stats {
-			background-color: #E8E8F7;
-		}
-		
-		border: 1px solid #0049DB !important;
-		-moz-box-shadow: 0 0 8px #0049DB;
-		-webkit-box-shadow: 0 0 8px #0049DB;
-		box-shadow: 0 0 8px #0049DB;
-	}
-	
-	.core {
-		
-		.details {
-			position: relative;
-			bottom: 113px;
-			text-align: center;
-			
-			p.title {
-				padding: 10px;
-				background: rgba(255,255,255,0.2);
-				
-				font-weight: bold;
-				text-shadow: 2px 2px #181918;
-				color: white;
-				font-size: 24px;
-			}
-			
-		}
-	}
-}
-
-.neighbourhoods {
-	.box:hover {
-		border: 1px solid #FF6C01 !important;
-		-moz-box-shadow: 0 0 8px #FF6C01;
-		-webkit-box-shadow: 0 0 8px #FF6C01;
-		box-shadow: 0 0 8px #FF6C01;
-	}
-	
-	.core {
-		.details {
-			position: relative;
-			bottom: 113px;
-			text-align: center;
-			
-			p.extras {
-				a {
-					color: #FF7E33 !important;
-				}
-				width: 80%;
-				margin-left: auto;
-				margin-right: auto;
-				font-size: 15px;
-			}
-			
-			p.title {
-				padding: 10px;
-				background: rgba(255,255,255,0.2);
-				
-				font-weight: bold;
-				text-shadow: 2px 2px #181918;
-				color: white;
-				font-size: 24px;
-			}
-			
-			p.title-light {
-				padding: 10px;
-				background: rgba(255,255,255,0.2);
-				
-				text-shadow: 1.5px 1.5px #181918;
-				color: white;
-				font-size: 20px;
-			}
-		}
-	}
-}
-
-.neighbourhoods, .rides {
-	a, a:hover {
-		color: white;
-		text-decoration: none;
-	}
-	
-	
-	.content {
-		
-		.remaining-days {
-			font-size: 12px;
-			margin-right: auto;
-			margin-left: auto;
-		}
-		
-		.trip-details {
-			margin-top: 15px;
-			color: #FF5400;
-			font-size: 11px;
-		}
-		
-		.core {
-			width: 300px !important;
-			height: 200px !important;
-			padding: 3px;
-			
-			img {
-				margin: 0px;
-				padding: 0px;
-			}
-			
-		}
-		
-		.details {
-			p.extras, p.dates {
-				color: white;
-				text-shadow: 1px 1px #2C2B2E;
-				
-				a{
-					color: #0078E4;
-				}
-			}
-		}
-		
-		.stats {
-			margin-top: 4px;
-			width: 99%;
-			
-			a {
-				display: inline-block;
-				text-decoration: none;
-				color: black;
-			}
-			
-			.number {
-				font-size: 23px;
-				margin-left: 5px;
-				vertical-align: 5px;
-			}
-			
-			.text {
-				margin-left: 3px;
-				font-size: 10px;				
-				text-transform: uppercase;
-				vertical-align: 10px;
-			}
-			
-			.trips-bicycle {
-				background: url('/assets/trips_bicycle.png');
-			}
-			
-			.trips-bicycle, .trips-people {
-				display: inline-block;
-				width: 35px;
-				height: 35px;
-			}
-			
-			.trips-people {
-				background: url('/assets/trips_people.png');
-			}
-		}
-		
-		.box {
-			border: 1px solid #B9B9B9;
-			margin: 18px;
-			display: inline-block;
-			padding-bottom: 5px;
-		}
-
 	}
 }
 
@@ -221,31 +402,7 @@ $wikicleta_light_blue: #DFEEF6;
 		color: $wikicleta_orange;
 	}
 	
-	.categories-menu {
-		margin-top: 20px;
-		margin-bottom: 0px;
-		ul {
-			list-style-type: none !important;
-			margin-left: auto;
-			margin-right: auto;
-
-			li.enabled:hover, li.active {
-				background-color: #E6E6E6;
-			}
-
-			li {
-				padding: 5px 10px 5px 10px;
-				display: inline-block !important;
-				margin-right: 10px;
-				margin-left: 10px;
-				font-size: 11px;
-
-				a {
-					text-decoration: none;
-					color: $wikicleta_blue;
-				}
-			}
-		}
+	
 		
 	}
 	
