--- a/app/views/trips/_trip.html.erb
+++ b/app/views/trips/_trip.html.erb
@@ -1,27 +1,30 @@
-<div class="trip box rounded-5">
-	<div class="core">
-		<%= link_to image_tag("trips/#{trip.picture_name}.jpg"), trip_path(trip) %>
-		<div class="details">
-			<p class="title-light"><%= link_to trip.name, trip_path(trip) %></p>
-			<p class="extras"><a href=""><%= trip.days_to_event %></a></p>
-		</div>
-	</div>
-	<div class="stats centered centered-text row-fluid">
-		<div class="span6 centered">
-			<a href=""><i class="trips-bicycle"></i><span class="text">Préstamo</span></a>
-		</div>
-		<% if trip.periodicity.eql?("every_sunday") %>
-			<div class="span6 centered">
-				<a href=""><i class="trips-people"></i><span class="text">Bici-escuela</span></a>
+<div id="<%= trip.slug %>" class="row-fluid trip-wrapper" data-lat="<%= trip.coordinates.lat %>" data-lon="<%= trip.coordinates.lon %>" data-kind="start_flag">
+	<div class="trip box span12">
+		
+		<div class="span2"></div>
+		<div class="span7">
+			<div class="details">
+				<p class="event-name"><%= link_to trip.name, 'javascript:void(0);' %></p>
+				<p class="days-to-event"><%= trip.days_to_event %></p>
+				<p class="event-timings"><%= trip.details %></p>
 			</div>
-		<% elsif trip.periodicity.eql?("last_sunday_month") %>	
-			<div class="span6 centered">
-				<a href=""><i class="trips-people"></i><span class="text">Entrena más</span></a>
+		</div>
+		<div class="span3">
+			<%= link_to image_tag("trips/#{trip.picture_name}.jpg", :class => "rounded"), 'javascript:void(0);' %>
+		</div>
+		
+		<div class="extras">
+			<%= render :partial => 'categories_menu', :locals => { :trip => trip } %>
+			<div class="trip-paths">
+				<% trip.segments.each do |segment| %>
+					<div id="<%= segment.id %>" class="segment" data-path="<%= segment.to_points_list %>" data-colour="<%= segment.color %>" data-details="<%= segment.details %>"></div>
+				<% end %>
 			</div>
-		<% end %>
-	</div>
-	<div class="separator"></div>
-	<div class="stats centered centered-text row-fluid">
-		<p class="trip-details"><%= image_tag('calendar_icon.png', :size => '30x30') %><%= trip.details %></p>
-	</div>
+			<div class="trip-pois hidden">
+				<% trip.trip_pois.each do |trip_poi| %>
+					<%= render trip_poi %>
+				<% end %>
+			</div>
+		</div>
+	</div>	
 </div>
