--- a/app/views/trips/index.js.erb
+++ b/app/views/trips/index.js.erb
@@ -1,1 +1,1 @@
-$('#section .listing').html("<%= escape_javascript(render :partial => 'trips/listing', :locals => { :trips => @trips }) %>");
+$('#trips-section .listing').html("<%= escape_javascript(render :partial => 'trips/listing', :locals => { :trips => @trips }) %>");
