--- a/app/views/cycling_groups/index.html.erb
+++ b/app/views/cycling_groups/index.html.erb
@@ -1,15 +1,11 @@
 <% content_for :panel do %>	
-	<div id="section" class="panel" data-url="<%= discover_groups_path %>">
+	<div id="cycling-groups-section" class="panel" data-url="<%= discover_cycling_groups_path %>">
 		<div class="inner-panel inner-panel-small">
-			<div class="row-fluid actions-bar"><%= render :partial => 'discover/menu', :locals => {:selected_city => @city} %></div>
+			<div class="row-fluid"><%= render :partial => 'discover/menu' %></div>
 		</div>
-		<div class="inner-panel inner-panel-big">
-			<%= render :partial => 'discover/submenu', :locals => {:section => :groups} %>
-	
-			<ul class="thumbnails span12">
-				<% @cycling_groups.each do |cg| %>
-					<%= render :partial => 'profiles/cycling_groups/cycling_group', :locals => {:cycling_group => cg} %>
-				<% end %>
+		<div class="inner-panel inner-panel-big">	
+			<ul class="content listing">
+				<%= render :partial => 'cycling_groups/listing', :locals => { :cycling_groups => @cycling_groups } %>
 	    </ul>
 		</div>
 	</div>
