--- a/app/views/discover/_menu.html.erb
+++ b/app/views/discover/_menu.html.erb
@@ -1,20 +1,24 @@
 <div class="span12">
+	<div class="actions-bar">
+		<div class="pull-left">
 			<p class="call-to-act">Descubre actividades ciclistas en</p>
 			<div class="btn-group">
-			  <button type="button" class="btn btn-primary btn-small"><%= selected_city_by_code(selected_city) %></button>
+			  <button type="button" class="btn btn-primary btn-small"><%= select_a_city(City.first) %></button>
 			  <button type="button" class="btn btn-primary dropdown-toggle btn-small" data-toggle="dropdown">
 			    <span class="caret"></span>
 			  </button>
 			  <ul class="dropdown-menu" role="menu">
-			    <%= non_selected_cities_when_code_selected_is(selected_city) %>
+			    <%= non_selected_cities_when_code_selected_is(City.first) %>
 			  </ul>
-				
+			
 			</div>
 			<p class="call-to-act">O cerca de ti</p>
 			<div class="btn-group">
 				<a class="btn btn-warning btn-small pull-right locate-me"><i class="icon icon-map-marker"></i> Ubicarme</a>
 			</div>
-			<div class="pull-right">
-				<%= image_tag('mini_spinner.gif', :class => "spinner") %>
-			</div>
+		</div>
+		<div class="pull-right">
+			<%= image_tag('mini_spinner.gif', :class => "spinner") %>
+		</div>
+	</div>
 </div>
