--- a/app/views/layouts/discover.html.erb
+++ b/app/views/layouts/discover.html.erb
@@ -3,7 +3,10 @@
 <head>
   <title><%= t('app.name') %></title>
 	
-  <%= stylesheet_link_tag    "maps" %>
+  <%= stylesheet_link_tag    "discover" %>
+  
+	<script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script>
+	<script src="http://platform.twitter.com/widgets.js" type="text/javascript"></script>
 	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
 	<%= javascript_include_tag "discover" %>
   <%= csrf_meta_tags %>
@@ -11,13 +14,21 @@
 </head>
 
 <body>	
+	<div id="fb-root"></div>
+	<script>(function(d, s, id) {
+	  var js, fjs = d.getElementsByTagName(s)[0];
+	  if (d.getElementById(id)) return;
+	  js = d.createElement(s); js.id = id;
+	  js.src = "//connect.facebook.net/es_LA/all.js#xfbml=1&appId=261609860582235";
+	  fjs.parentNode.insertBefore(js, fjs);
+	}(document, 'script', 'facebook-jssdk'));</script>
 	<%= render 'layouts/shared/navbar' %>
 	
 	<div id="content">
 		<div class="background-logo"></div>	
 		<%= yield :panel %>
 	</div>
-	<div id="map-container"><div id="map" class="show-only edit"></div></div>
+	<div id="map-container"><div id="map" class="show-only edit <%= yield :map_behavior %>"></div></div>
 </body>
 
 </html>
