--- a/app/assets/stylesheets/discover.css.scss
+++ b/app/assets/stylesheets/discover.css.scss
@@ -2,200 +2,135 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 /*
- *= require maps
+ *= require map_based/common
  *= require bootstrap-fileupload.min
 **/
 
-$wikicleta_orange: #fb4e15;
-$wikicleta_blue: #1f3a50;
-$wikicleta_light_blue: #DFEEF6;
+@import "colors.css.scss";
 
 html, body {
     height:100%;
 }
 
-#content
-{
-    width: 50%;
-    position: absolute;
-    z-index: 1;
-    top:0;
-    left:0 !important;
-		pointer-events: none;
+.inner-panel {
+	
+	.with-focus {
+		border: none !important;
+	}
+	
+	.empty-listing {
+		margin-left: 100px;
 		
-	.panel {
-		pointer-events: auto;
-		background-color: rgba(255,255,255,0.5);
-		-moz-box-shadow: 0 0 1px #ADBBC5;
-		-webkit-box-shadow: 0 0 1px #ADBBC5;
-		box-shadow: 0 0 1px #ADBBC5;
-		padding: 10px;
-		border-radius: 0px 0px 5px 0px;
-		margin-bottom: 30px;
-		
-		.inner-panel-big {
-			margin-top: 10px;
-		}
-		
-		.inner-panel-small {
+		.suggest {
 			margin-top: 40px;
-			min-height: 40px;
+			font-size: 20px;
+			color: $wikicleta_orange;
+			margin-bottom: 40px;
+			
+			.blue {
+				color: $wikicleta_blue;
+			}
+		}
+	}
+	
+	.listing-actions {
+		display: none;
+		padding: 20px 10px 10px 0px !important;
+		text-align: right !important;
+		a {
+			color: $wikicleta_orange;
+			text-decoration: none;
 		}
 		
-		.inner-panel {
-			border: 1px solid #CED7E8 !important;
-			border-radius: 5px;
-			background-color: white;
-			
-			.with-focus {
-				border: none !important;
-			}
-			
-			.empty-listing {
-				margin-left: 100px;
+		a.btn {
+			color: white !important;
+			margin-left: 20px;
+		}
+	}
+	
+	.activities {
+		padding-top: 20px;
+		
+		.results {
+			margin-right: 18px;
+			text-align: right;
+			color: #9DA2B5;
+			margin-bottom: 15px;
+		}
+
+		
+		.items {
+			ul.sub-actions {
+				list-style: none;
+				li {
+					display: inline-block;
+					margin-right: 10px;
+					padding-bottom: 0px !important;
+					margin-bottom: 0px !important;
+				}
 				
-				.suggest {
-					margin-top: 40px;
-					font-size: 20px;
-					color: $wikicleta_orange;
-					margin-bottom: 40px;
+				
+				.activity {
+					padding-right: 10px;
+
+					p {
+						text-align: right;
+						font-size: 13px;
+						margin:0px;
+						margin-bottom: 5px;
+						color: #BCBCBC;
+						
+					}
+
+
+					.numeric {
+						font-weight: bold;
+						font-size: 30px;
+						color: #BCBCBC;
+					}
+				}
+				
+				li.active a {
+					.numeric {
+						color: $wikicleta_orange !important;
+					}
 					
-					.blue {
+					.kind {
 						color: $wikicleta_blue;
 					}
 				}
 			}
+
 			
-			.listing-actions {
-				display: none;
-				padding: 20px 10px 10px 0px !important;
-				text-align: right !important;
-				a {
-					color: $wikicleta_orange;
-					text-decoration: none;
-				}
-				
-				a.btn {
-					color: white !important;
-					margin-left: 20px;
-				}
+			a:hover {
+				text-decoration: none;
+				color: $wikicleta_orange !important;
 			}
-			
-			.activities {
-				padding-top: 20px;
-				
-				.results {
-					margin-right: 18px;
-					text-align: right;
-					color: #9DA2B5;
-					margin-bottom: 15px;
-				}
-
-				
-				.items {
-					ul.sub-actions {
-						list-style: none;
-						li {
-							display: inline-block;
-							margin-right: 10px;
-							padding-bottom: 0px !important;
-							margin-bottom: 0px !important;
-						}
-						
-						
-						.activity {
-							padding-right: 10px;
-
-							p {
-								text-align: right;
-								font-size: 13px;
-								margin:0px;
-								margin-bottom: 5px;
-								color: #BCBCBC;
-								
-							}
-
-
-							.numeric {
-								font-weight: bold;
-								font-size: 30px;
-								color: #BCBCBC;
-							}
-						}
-						
-						li.active a {
-							.numeric {
-								color: $wikicleta_orange !important;
-							}
-							
-							.kind {
-								color: $wikicleta_blue;
-							}
-						}
-					}
-
-					
-					a:hover {
-						text-decoration: none;
-						color: $wikicleta_orange !important;
-					}
-					display: inline-block;
-				}
-			}
-
-			.content {
-				padding: 0px 0px 10px 0px !important;
-			}
-			
-			.actions-bar {
-				padding: 6px 8px 8px 8px;
-				
-				.call-to-act {
-					display: inline-block;
-					padding-top: 4px;
-					font-size: 15px;
-					color: $wikicleta_orange;
-					margin-right: 10px;
-					margin-left: 10px;
-				}
-			}
-			
-			.spinner {
-				margin-right: 10px;
-				display: none;
-			}
+			display: inline-block;
 		}
+	}
+
+	.content {
+		padding: 0px 0px 10px 0px !important;
+	}
+	
+	.actions-bar {
+		padding: 6px 8px 8px 8px;
 		
-
+		.call-to-act {
+			display: inline-block;
+			padding-top: 4px;
+			font-size: 15px;
+			color: $wikicleta_orange;
+			margin-right: 10px;
+			margin-left: 10px;
+		}
 	}
-}
-
-#map-container {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 0;
-}
-
-#map
-{
-    width: 100%;
-    height: 100%;
-}
-
-.btn {
-	a {
-		color: white;
+	
+	.spinner {
+		margin-right: 10px;
+		display: none;
 	}
-}
-
-.rounded {
-	border:1px solid white;
-	-webkit-border-radius: 10px;
-	-moz-border-radius: 10px;
-	border-radius: 10px;
 }
 
 .section {
