--- a/app/assets/stylesheets/profiles.css.scss
+++ b/app/assets/stylesheets/profiles.css.scss
@@ -1,11 +1,178 @@
 /*
- *= require_self
- *= require bikes
- *= require bootstrap_and_overrides
- *= require shared/main
- *= require tips
- *= require places
+ *= require map_based/common
+ *= require bootstrap-fileupload.min
  */
+@import "colors.css.scss";
+
+#user-profile {
+	
+	.pic-container {
+		margin-top: 20px;
+		
+		img {
+			border: 5px solid #F0FDFF;
+			
+			-webkit-border-radius: 80px;
+			-moz-border-radius: 80px;
+			border-radius: 80px;
+			
+			-webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.2);
+		  -moz-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.2);
+		  box-shadow: 0 3px 7px rgba(0, 0, 0, 0.2);
+		}
+		
+		img:hover {
+			border: 5px solid #EEFBFF;
+		}
+	}
+	
+	.decoration-image {
+		pointer-events: none;
+		width: 500px;
+		height: 313px;
+		position: absolute;
+		opacity: 0.15;
+		left: 10%;
+		margin-right: 150px;
+		background-image: url('/assets/city_cycling.png');
+	}
+	
+	.username {
+		font-weight: 800;
+		font-size: 25px;
+		margin: 20px 0px 5px 0px;
+		color: $wikicleta_blue;
+	}
+	
+	.bio {
+		font-style: italic;
+		font-size: 14px;
+		font-weight: 100;
+		color: $wikicleta_blue;
+	}
+	
+	.user-actions {
+		z-index: 99;	
+		.separator {
+			margin-bottom: 10px;
+		}
+		padding: 15px 10px 10px 5px;
+	}
+	
+	.city {
+		.name {
+			font-size: 12px;
+			text-transform: uppercase;
+			color: $wikicleta_orange;
+			font-weight: bold;
+			
+			span {
+				font-weight: normal !important;
+			}
+		}
+	}
+	
+	.activity-container {
+		display: none;
+		
+		.activity-list {
+			
+			p {
+				padding-top: 5px;
+				font-size: 11px;
+			}
+			
+			h3 {
+				text-transform: uppercase;
+				font-size: 11px;
+				
+				.title {
+					color: $wikicleta_orange;
+					font-weight: 600;
+				}
+				
+				.note {
+					color: $wikicleta_blue;
+				}
+			}
+			
+			padding: 10px 10px 0px 10px !important;
+		}
+	}
+
+}
+
+#action-selected {
+	padding: 0px 10px 5px 10px;
+	
+	.details {
+		border-top: 1px solid #D2DAEB;
+		padding-top: 10px;
+		
+		.title {
+			margin-bottom: 0px;
+			font-size: 18px;
+			color: $wikicleta_orange;
+			margin:0px;
+		}
+
+		.updated-at, .timing {
+			font-size: 12px;
+			color: $wikicleta_blue;
+			margin:0px;
+		}
+		
+		.controls {
+			margin-top: 10px;
+		}
+	}
+}
+
+#edit-profile {
+	
+	.settings {
+		width: 400px;
+		height: 400px;
+		position: absolute;
+		opacity: 0.10;
+		left: 7%;
+		top: 20%;
+		pointer-events: none;
+		background-image: url('/assets/gear.png');
+	}
+	
+	.content {
+		margin: 30px;
+		
+		h3 {
+			color: $wikicleta_orange;
+		}
+		
+		.section-title {
+			color: $wikicleta_blue;
+			font-size: 13px;
+		}
+		
+		.control-group {
+			label {
+				font-size: 12px;
+				color: $wikicleta_blue;
+			}
+		}
+		
+		.delete-current-picture {
+			margin: 30px 0px 10px 0px;
+			font-size: 12px;
+		}
+		
+		.select-cycling-date {
+			
+			select {
+				width: 100px;
+			}
+		}
+	}
+}
 
 .not-ready-yet {
 	padding: 50px !important;
