--- a/app/views/layouts/discover.html.erb
+++ b/app/views/layouts/discover.html.erb
@@ -11,17 +11,10 @@
 	<%= javascript_include_tag "discover" %>
   <%= csrf_meta_tags %>
 	<%= render 'layouts/shared/fav_icons' %>
+	<%= render 'layouts/shared/mix_panel' %>
 </head>
 
-<body>	
-	<div id="fb-root"></div>
-	<script>(function(d, s, id) {
-	  var js, fjs = d.getElementsByTagName(s)[0];
-	  if (d.getElementById(id)) return;
-	  js = d.createElement(s); js.id = id;
-	  js.src = "//connect.facebook.net/es_LA/all.js#xfbml=1&appId=261609860582235";
-	  fjs.parentNode.insertBefore(js, fjs);
-	}(document, 'script', 'facebook-jssdk'));</script>
+<body>
 	<%= render 'layouts/shared/navbar' %>
 	
 	<div id="content">
