--- a/app/views/layouts/profiles.html.erb
+++ b/app/views/layouts/profiles.html.erb
@@ -1,48 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title><%= t('app.name') %></title>
-	  
+  <title><%= t('app.name') %> : <%= @user.username %></title>
+	
+  <%= stylesheet_link_tag  "profiles" %>
+  
+	<script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script>
+	<script src="http://platform.twitter.com/widgets.js" type="text/javascript"></script>
 	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
-	<%= stylesheet_link_tag    "profiles" %>
-  <%= javascript_include_tag "profiles" %>
+	<%= javascript_include_tag "profiles" %>
   <%= csrf_meta_tags %>
 	<%= render 'layouts/shared/fav_icons' %>
 	<%= render 'layouts/shared/mix_panel' %>
 </head>
+
 <body>
-	<%= user_default_city %>
-	<div class="background-logo"></div>
 	<%= render 'layouts/shared/navbar' %>
-
-	<div id="top-container" class="row-fluid top-spaced-70 profile">
-		<div class="span1"></div>
-		<div class="span2">
-			<%= render :partial => 'layouts/profiles/main_user_info', :locals => {:user => @user} %>
-			
-			<div class="well menu">
-				<ul class="nav nav-list">
-		    	<li class="<%= on_path?(user_profile_path(@user.username)) %>">
-						<%= link_to (user_signed_in? && current_user_equals(@user) ? 'Tu actividad' : 'Actividad'), user_profile_path(@user.username) %>
-					</li>
-		    	<li class="<%= on_path?(user_gear_path(@user.username)) %>">
-						<%= link_to (user_signed_in? && current_user_equals(@user) ? 'Tu equipo' : 'Equipo'), user_gear_path(@user.username) %>
-					</li>
-					<% if user_signed_in? && current_user_equals(@user) %>
-		    		<li class="nav-header">Configuración</li>
-						<li class="<%= on_path?(settings_profile_path) %>"><%= link_to 'Perfil', settings_profile_path %></li>
-						<li class="<%= on_path?(settings_access_path) %>"><%= link_to 'Acceso', settings_access_path %></li>
-					<% end %>
-		    </ul>
-			</div>		
-		</div>
-		<div class="span8">
-			<%= render 'layouts/shared/notice' %>
-			<%= yield %>
-		</div>
-		<div class="span1"></div>
+	
+	<div id="content-centered">
+		<div class="background-logo"></div>	
+		<%= yield :panel %>
 	</div>
-
-
+	<div id="map-container"><div id="map" class="show-only edit <%= yield :map_behavior %>"></div></div>
 </body>
+
 </html>
