--- a/app/views/settings/profile.html.erb
+++ b/app/views/settings/profile.html.erb
@@ -1,119 +1,119 @@
+<% content_for :panel do %>	
+	<div id="edit-profile" class="panel">
+		<div class="settings"></div>
+		<div class="inner-panel inner-panel-centered inner-panel-big">
+			<div class="content">
+				<div class="row">
+					<p class="pull-left"><a href="<%= user_profile_path(@user.username) %>" class="btn btn-link"><i class="icon icon-chevron-left"></i> <%= t('actions.back') %></a></p>
+					<h3 class="pull-right">Tu perfil</h3>
+				</div>
+				<div class="top-spaced">
+					<p class="section-title">Ajustes básicos de tu cuenta</p>
+					<div class="separator"></div>
+					<div class="row-fluid">
+						<%= form_for(@user, :url => settings_changed_path(@user), :html => { :method => :put, :class => "form-horizontal top-spaced" }) do |f| %>
+							<div class="span2"></div>
+							<div class="span10">
+								<div class="control-group">
+									<%= f.label :username, :class => "control-label" %>
+									<div class="controls">
+									  <%= f.text_field :username %>
+									</div>
+								</div>
 
-<div class="row">
-	<h3 class="pull-right">Tu perfil</h3>
-</div>
-<div class="well top-spaced">
-	<h4>Basicos</h4>
-	<p>Si lo necesitas, cambia tu nombre de usuario, nombre o e-mail</p>
-	<div class="separator"></div>
-	<div class="row">
-		<div class="span2"></div>
-		<div class="span8">
-		<%= form_for(@user, :url => settings_changed_path(@user), :html => { :method => :put, :class => "form-horizontal top-spaced" }) do |f| %>
-		
-			<div class="control-group">
-				<%= f.label :username, :class => "control-label" %>
-				<div class="controls">
-				  <%= f.text_field :username %>
-				</div>
-			</div>
-		
-			<div class="control-group">
-				<%= f.label :full_name, :class => "control-label" %>
-				<div class="controls">
-					<%= f.text_field :full_name %>
-				</div>
-			</div>
-		
-			<div class="control-group">
-				<%= f.label :email, :class => "control-label" %>
-				<div class="controls">
-				  <%= f.email_field :email %>
-				</div>
-			</div>
-		
-			<div class="centered-text">
-				<%= f.submit t('user_accounts.settings.save'), :class => 'btn btn-primary' %>
-			</div>
-		<% end %>
-		</div>
-		<div class="span2"></div>
-	</div>
-	<br/>
-	<p>Establece o actualiza tu foto de perfil</p>
-	<div class="separator"></div>
-	<br/>
-	<div class="row-fluid">
-		<div class="span6">
-			<%= form_tag settings_change_picture_path, :multipart => true , :method => :put, :class => "form-horizontal" do %>
-				<div class="control-group">
-					<%= label_tag 'Selecciona una imagen:' %>
-					<div class="controls">
-						<%= file_field_tag :file %>
+								<div class="control-group">
+									<%= f.label :full_name, :class => "control-label" %>
+									<div class="controls">
+										<%= f.text_field :full_name %>
+									</div>
+								</div>
+
+								<div class="control-group">
+									<%= f.label :email, :class => "control-label" %>
+									<div class="controls">
+									  <%= f.email_field :email %>
+									</div>
+								</div>
+
+								<div class="control-group">
+									<%= f.label :city, :class => "control-label" %>
+									<div class="controls">
+								  	<%= f.select :city_id, options_from_collection_for_select(City.all, :id, :name, @user.city_id), {:include_blank => true} %>
+									</div>
+								</div>
+
+								<div class="control-group">
+									<%= f.label :bio, :class => "control-label" %>
+									<div class="controls">
+								  	<%= f.text_area :bio, :rows => 5, :cols => 30 %>
+									</div>
+								</div>
+
+								<div class="control-group">
+									<%= f.label :personal_page, :class => "control-label" %>
+									<div class="controls">
+								  	<%= f.text_field :personal_page %>
+									</div>
+								</div>
+
+								<div class="control-group">
+									<%= f.label :started_cycling_date, :class => "control-label" %>
+									<div class="controls select-cycling-date">
+										<%= f.date_select :started_cycling_date, :discard_day => true %>
+									</div>
+								</div>
+							</div>
+							<div class="centered-text">
+								<%= f.submit t('user_accounts.settings.save'), :class => 'btn btn-primary btn-large' %>
+							</div>
+						<% end %>
+					</div>
+					<br/>
+					<p class="section-title">Establece o actualiza tu foto de perfil</p>
+					<div class="separator"></div>
+					
+					<div class="row-fluid delete-current-picture">
+						<% unless current_user.picture.nil? %>
+							<p>
+								<span>Si lo deseas, puedes eliminar la imagen actual: </span>
+								<%= link_to '<i class="icon-remove icon"></i> Eliminar'.html_safe, settings_destroy_picture_path, :method => :delete, :class => "btn btn-danger pull-right" %>
+								</p>
+						<% end %>
+					</div>
+					<div class="row-fluid">
+							<%= form_tag settings_change_picture_path, :multipart => true , :method => :put, :class => "form-horizontal" do %>
+								<div class="centered-text">
+									<div class="fileupload fileupload-new" data-provides="fileupload">
+										<div class="fileupload-new thumbnail" style="width: 200px; height: 150px;">
+											<% if !@user.picture.nil? && !@user.picture.image.url.nil? %>
+												<%= image_tag(@user.picture.image.url) %>
+											<% end %>
+										</div>
+										<div class="fileupload-preview fileupload-exists thumbnail" style="max-width: 200px; max-height: 150px; line-height: 20px;"></div>
+									<div>
+									<span class="btn btn-file">
+										<span class="fileupload-new"><%= t('actions.input_file.select') %></span>
+										<span class="fileupload-exists"><%= t('actions.input_file.change') %></span>
+										<%= file_field_tag('file') %>
+									</span>
+									<a href="#" class="btn fileupload-exists" data-dismiss="fileupload"><%= t('actions.input_file.remove') %></a>
+									</div>
+									</div>
+								</div>
+							<% end %>
+							<div class="centered-text">
+								<%= submit_tag 'Subir', :class => "btn btn-info btn-large" %>
+							</div>
+						</div>
 					</div>
 				</div>
-				<div class="control-group">
-					<div class="controls">
-						<%= submit_tag 'Aceptar', :class => "btn btn-info pull-right" %>
-					</div>
-				</div>
-			<% end %>
-		</div>
-		<div class="span6">
-			<% unless current_user.picture.nil? %>
-				<p>Si lo deseas, puedes eliminar la imagen actual: </p>
-				<%= link_to 'Eliminar', settings_destroy_picture_path, :method => :delete, :class => "btn btn-danger pull-right" %>
-			<% end %>
+			</div>
 		</div>
 	</div>
-</div>
+<% end %>
 
-<div class="well top-spaced">
-	<h4>Cuéntanos de ti</h4>
-	<p>¿Quién eres? ¿Por que te gusta la bici? ¿Desde cuando la usas?</p>
-	<div class="separator"></div>
-	<div class="row top-spaced">
-		<div class="span2"></div>
-		<div class="span8">
-		<%= form_for(@user, :url => settings_changed_path(@user), :html => { :method => :put, :class => "form-horizontal top-spaced" }) do |f| %>
-			
-			<div class="control-group">
-				<%= f.label :city, :class => "control-label" %>
-				<div class="controls">
-			  	<%= f.select :city_id, options_from_collection_for_select(City.all, :id, :name, @user.city_id), {:include_blank => true} %>
-				</div>
-			</div>
 
-			<div class="control-group">
-				<%= f.label :bio, :class => "control-label" %>
-				<div class="controls">
-			  	<%= f.text_area :bio, :rows => 5, :cols => 30 %>
-				</div>
-			</div>
-			
-			<div class="control-group">
-				<%= f.label :personal_page, :class => "control-label" %>
-				<div class="controls">
-			  	<%= f.text_field :personal_page %>
-				</div>
-			</div>
-			
-			<div class="control-group">
-				<%= f.label :started_cycling_date, :class => "control-label" %>
-				<div class="controls">
-					<%= f.date_select :started_cycling_date, :discard_day => true, :html_options => {:class => 'input-small'} %>
-				</div>
-			</div>
-
-			<div class="centered-text">
-				<%= f.submit t("user_accounts.settings.save"), :class => 'btn btn-primary' %>
-			</div>
-		<% end %>
-		</div>
-		<div class="span2"></div>
-	</div>
-</div>
-
+<% if 1 == 2%>
 <div class="well top-spaced">
 	<h4>Desactivar</h4>
 	<p>¿Por alguna razón deseas dar de baja tu cuenta?</p>
@@ -127,4 +127,5 @@
 		</div>
 	</div>
 </div>
+<% end %>
 
