--- a/app/views/discover/_submenu.html.erb
+++ b/app/views/discover/_submenu.html.erb
@@ -1,4 +1,4 @@
-<div class="activities">
+<div class="row activities">
 	<div class="items pull-right">	
 		<ul class="pull-right sub-actions">
 			<li class="activity <%= "active" if section.eql?(:trips) %>">
