--- a/app/views/layouts/discover.html.erb
+++ b/app/views/layouts/discover.html.erb
@@ -2,7 +2,10 @@
 <html>
 <head>
   <title><%= t('app.name') %></title>
-	
+	<meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <%= stylesheet_link_tag    "discover" %>
   
 	<script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script>
@@ -15,7 +18,7 @@
 </head>
 
 <body>
-	<%= render 'layouts/shared/navbar' %>
+	<%= render 'layouts/shared/navbar_maps' %>
 	
 	<div id="content">
 		<div class="background-logo"></div>	
