--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -32,7 +32,7 @@
 					<% end %>
 				<% end %>
 			</div>
-			<div id="action-selected" class="container-fluid"></div>
+			<div id="action-selected" class="container-fluid items-list"></div>
 		</div>
 	</div>
 	
