--- a/app/assets/stylesheets/map_based/common.css.scss
+++ b/app/assets/stylesheets/map_based/common.css.scss
@@ -3,6 +3,52 @@
  *= require maps
 **/
 
+#navigation-bar {
+	width: 100%;
+	height: 40px;
+	background-color: white;
+	top: 0px;
+	left: 0px;
+	position: absolute;
+	z-index: 99;
+	
+	-moz-box-shadow: 0 0 2px #A3A3A3;
+	-webkit-box-shadow: 0 0 2px #A3A3A3;
+	box-shadow: 0 0 2px #A3A3A3;
+	
+	.mini-logo {
+		height: 35px;
+		margin-top: 2px;
+	}
+	
+	.inner-bar {
+		margin-left: 20px;
+		margin-right: 50px;
+	}
+	
+	a {
+		background-color: none !important;
+		text-decoration: none;
+	}
+	
+	.nav-items {
+		list-style: none;
+		
+		> li {
+			display: inline-block;
+			padding: 10px;
+		}
+				
+		> li.active {
+			background-color: #F5FFFA !important;
+		}
+		
+		> li:hover {
+			background-color: #FFF4E6 !important;
+		}
+	}
+}
+
 #map-container {
     width: 100%;
     height: 100%;
@@ -33,14 +79,15 @@
 
 
 #content-centered {
-	left:30% !important;
-	width: 40%;
+	left: 50%;
+	width: 600px;
+	margin-left: -300px;
 }
 
 #content
 {
     left:0 !important;
-		width: 50%;
+		width: 770px;
 }
 
 #content, #content-centered {		
