--- a/app/assets/stylesheets/shared/main.css.scss
+++ b/app/assets/stylesheets/shared/main.css.scss
@@ -51,6 +51,8 @@ body, html {
 		color: #1f3a50 !important;
 	}
 	.mini-logo {
+		height: 35px;
+		margin: 2px 7px 0px 20px;
 		margin-top: 2px;
 		margin-right: 7px;
 	}
@@ -348,7 +350,6 @@ $assaults: #63A62C;
 $breakdowns: #F18706;
 
 .listing-view {
-	margin-top: 20px;
 
 	.with-focus {
 		border: 2px solid #0F527C !important;
