--- a/app/views/layouts/profiles.html.erb
+++ b/app/views/layouts/profiles.html.erb
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-	<%= render 'layouts/shared/navbar' %>
+	<%= render 'layouts/shared/navbar_maps' %>
 	
 	<div id="content-centered">
 		<div class="background-logo"></div>	
