--- a/app/views/layouts/shared/_navbar.html.erb
+++ b/app/views/layouts/shared/_navbar.html.erb
@@ -1,31 +1,51 @@
 <div class="navbar navbar-fixed-top">
   <div class="navbar-inner">
-    <div class="container">
-      <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-			<span class="pull-left">
-			<%= image_tag('wikicleta_icon.png', :size => '35x35', :class => 'mini-logo') %>
-			</span>
-			<%= link_to t('app.name'), root_path, :class => "brand" %>
-      <div class="nav-collapse collapse">
-        <ul class="nav pull-right">
-					<% unless user_signed_in? %>
-						<li><%= link_to 'Principal', root_path  %></li>
-					<% end %>
-					<li class="<%= is_section_active?('trips') || is_section_active?('cycling_groups') %>">
-						<%= link_to 'Descubre', discover_trips_path  %>
-					</li>
-					
-					<% if 1 == 2 %>
-					<li class="<%= is_section_active?('maps') %>"><%= link_to 'El Wiki', maps_path %></li>
-					<li class="<%= 'active' if controller.controller_name.eql?('bikes') %>"><%= link_to 'Bicis y Más', bikes_path %></li>
-					<% end %>
-					<%= render 'layouts/shared/navbar_logged_in_user' %>
-				</ul>
-      </div>
+    <div class="row-fluid">
+
+			<div class="span2">
+				<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target="nav-collapse">
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	      </button>
+				<span>
+					<%= image_tag('wikicleta_icon.png', :class => 'mini-logo') %>
+				</span>
+			</div>
+			<div class="span10">
+	      <div class="nav-collapse collapse">
+	        <ul class="nav pull-right">
+						<% unless user_signed_in? %>
+							<li><%= link_to 'Principal', root_path  %></li>
+						<% end %>
+						<li class="<%= is_section_active?('trips') || is_section_active?('cycling_groups') %>">
+							<%= link_to 'Descubre', discover_trips_path  %>
+						</li>
+
+						<% if 1 == 2 %>
+						<li class="<%= is_section_active?('maps') %>"><%= link_to 'El Wiki', maps_path %></li>
+						<li class="<%= 'active' if controller.controller_name.eql?('bikes') %>"><%= link_to 'Bicis y Más', bikes_path %></li>
+						<% end %>
+						<% if user_signed_in? %>
+							<li class="user-logged-in dropdown">
+								<%= link_to "<i class='icon-chevron-down'></i> #{current_user.username}".html_safe, '#', :class => "dropdown-toggle", "data-toggle"=>"dropdown" %>
+								<ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+									<li><%= link_to 'Perfil', user_profile_path(current_user.username) %></li>
+									<li class="divider"></li>
+									<li><%= link_to 'Cerrar Sesión', destroy_user_session_path, :method => :delete %></li>
+						    </ul>
+							</li>
+						<% else %>
+							<li>
+								<a href="<%= new_user_session_path %>" class="login-link" type="button">
+									 <i class='icon-user'></i> Iniciar Sesión
+								</a>
+							</li>
+						<% end %>
+					</ul>
+	      </div>
+			</div>
+			
     </div>
   </div>
 </div>
