Only it's delegated admins can edit a cycling group and cycling group name has to be unique

--- a/app/assets/stylesheets/shared/main.css.scss
+++ b/app/assets/stylesheets/shared/main.css.scss
@@ -116,656 +116,12 @@ a.personal {
 	color: #F29721 !important;
 }
 
-.green-beam { color:#32A328 }
-.grey-beam { color:#929292 }
-.white-beam { color:white }
-
 .field-counter {
 	margin-top: 5px;
 	font-size: 13px;
 	color: #D95100;
 }
 
-#floating, #notification {
-	z-index: 9999;
-	position: fixed;
-}
-
-.rounded-5 {
-	border-radius: 5px;
-	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;
-}
-
-.rounded-10 {
-	border-radius: 10px;
-	-moz-border-radius: 10px;
-	-webkit-border-radius: 10px;
-}
-
-.ml-20 {
-	margin-left: 40px;
-}
-
-.mb-10 {
-	margin-bottom: 10px;
-}
-
-.rounded-bottom-5 {
-	border-bottom-right-radius: 5px;
-	border-bottom-left-radius: 5px;
-	-moz-border-bottom-left-radius: 5px;
-	-moz-border-bottom-right-radius: 5px;
-	-webkit-border-bottom-left-radius: 5px;
-	-webkit-border-bottom-right-radius: 5px;
-}
-
-.rounded-top-5 {
-	border-top-right-radius: 5px;
-	border-top-left-radius: 5px;
-	-moz-border-top-left-radius: 5px;
-	-moz-border-top-right-radius: 5px;
-	-webkit-border-top-left-radius: 5px;
-	-webkit-border-top-right-radius: 5px;
-}
-
-a {
-	text-decoration: none;
-}
-
-a.back:hover {
-	text-decoration: underline !important;
-	color: #537DB6;
-}
-
-a.back {
-	font-size: 14px;
-}
-
-.shadow-light {
-	-moz-box-shadow: 0 0 2px #A5A5A5;
-	-webkit-box-shadow: 0 0 2px #A5A5A5;
-	box-shadow: 0 0 2px #A5A5A5;
-}
-
-.shadow-lighter {
-	-moz-box-shadow: 0 0 8px #9E9E9E;
-	-webkit-box-shadow: 0 0 8px #9E9E9E;
-	box-shadow: 0 0 8px #9E9E9E;
-}
-
-.shadow-strong {
-	-moz-box-shadow: 0 0 10px #1A1A1A;
-	-webkit-box-shadow: 0 0 10px #1A1A1A;
-	box-shadow: 0 0 10px #1A1A1A;
-}
-
-.to-right {
-	float: right;
-}
-
-.to-left {
-	float: left;
-}
-
-.inlined {
-	display: inline-block !important;
-}
-
-.separator {
-	height: 1px;
-	background-color:#D0D0D0;
-	margin: 5px;
-}
-
-.spacer {
-	height: 8px;
-}
-
-#container {
-	width: 920px;
-	padding-top: 50px;
-	margin-bottom: 40px;
-	margin-left: auto;
-	margin-right: auto;
-	clear: both;
-}
-
-.mini-header h1 .type, #newitem h1 .type {
-	font-size: 15px;
-	margin-left: 8px;
-	vertical-align: 2px;
-	color: #EEE;
-	background-color:#A6A6A6;
-	padding: 0px 5px;
-}
-
-ul.inlined-list li, ul.inlined-list li * { display: inline-block; }
-
-.highest {
-	background-color: #797979 !important;
-	color: white;
-	font-weight: bold;
-	opacity: 1 !important;
-}
-
-.simplePagerContainer ul{ display:inline-block;*display:inline;*zoom:1;margin-left:0;margin-bottom:0;-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px;-webkit-box-shadow:0 1px 2px rgba(0, 0, 0, 0.05);-moz-box-shadow:0 1px 2px rgba(0, 0, 0, 0.05);box-shadow:0 1px 2px rgba(0, 0, 0, 0.05);}
-.simplePagerContainer ul li{ display:inline; }
-.simplePagerContainer ul li a{ float:left;padding:0 14px;line-height:34px;text-decoration:none;border:1px solid #ddd;border-left-width:0; color: #45793B; background-color: white; }
-.simplePagerContainer ul li a:hover, li.currentPage a {background-color:#ECECEC !important;}
-.simplePagerContainer ul li.currentPage a{color:#999999;cursor:default;}
-.simplePagerContainer ul li:first-child a{border-left-width:1px;-webkit-border-radius:3px 0 0 3px;-moz-border-radius:3px 0 0 3px;border-radius:3px 0 0 3px;}
-.simplePagerContainer ul li:last-child a{-webkit-border-radius:0 3px 3px 0;-moz-border-radius:0 3px 3px 0;border-radius:0 3px 3px 0;}
-
-p.empty {
-	margin-top: 10%;
-	font-style: italic;
-	font-size: 18px;
-	text-align: center;
-}
-
-.loading {
-	width: 180px;
-	margin-top: 20px;
-	font-style: normal;
-	text-align: center;
-	border: none !important;
-	display: none;
-	
-	.spinner {
-		height: 30px;
-		width: 30px;
-		margin-left: 4px;
-		background: url(/assets/spinner.gif);
-	}
-	
-	p {
-		padding-top: 13px !important;
-		font-size: 13px;
-		font-weight: bold;
-		vertical-align: 10px;
-		color: #2B3B63;
-	}
-}
-
-.login-link {
-	color: #FF5800 !important;
-}
-
-.emphasize {
-	color: #FF6800;
-}
-
-.emph-small {
-	font-size: 11px;
-	font-weight: bold;
-	color: #4B4B4B;
-}
-
-.user-logged-in {
-	font-weight: bold;
-	
-	> a {
-		color: #FF5800 !important;
-	}
-}
-
-.error-explained {
-	ul {
-		li {
-			display: block;
-		}
-	}
-}
-
-
-// Ordered styles
-
-.board-login {
-	margin-top: 0px !important;
-}
-
-.board {
-	margin-top: 50px;
-	background-color: #FFF;
-	padding-top: 20px;
-	border: 0.2px solid #8EC4FF;	
-}
-
-.subsection {
-	background-color: white;
-	padding: 10px;
-	color: #FF4B02;
-	font-weight: 200;
-	border: 1px solid #FFC088;
-	* {
-		display: inline-block;
-	}
-}
-
-
-$accidents: #CE2B28;
-$thefts: #3652AE;
-$assaults: #63A62C;
-$breakdowns: #F18706;
-
-.listing-view {
-
-	.with-focus {
-		border: 2px solid #0F527C !important;
-		.signal {
-			opacity: 1 !important;
-		} 
-	}
-
-	.empty {
-		text-align: center;
-	}
-
-	.with-focus {
-		.extras {
-			display: block !important;
-		}
-	}
-
-	.incident {
-		border: 2px solid #CEDEFF;
-		background-color: #FCFAFF;
-		padding: 10px;
-		padding-bottom: 5px;
-		margin: 10px;
-
-		.extras {
-			display: none;
-		}
-
-		.title {
-			font-size: 12px;
-			text-transform: uppercase;
-			margin-top: 5px;
-			font-weight: bold;
-		}
-
-		.signal:hover {
-			opacity: 1;
-		}
-
-		.signal {
-			width: 100%;
-			height: 20px !important;
-			opacity: 0.5;
-			cursor: pointer;
-		}
-
-		.contextual-info, .contextual-actions {
-			li {
-				margin-right: 15px;
-			}
-		}
-
-		.contextual-actions {
-			margin-left: 20px;
-			font-size: 13px;
-
-			.remarked a {
-				color: #FF4F00;
-			}
-		}	
-
-		.contextual-info {
-			li {
-				margin-right: 15px;
-			}
-
-			.time {
-				text-transform: uppercase;
-				font-size: 10px;
-			}
-
-			.reporter {
-				font-size: 11px;
-				color: #3D5FA6;
-			}
-
-			.comments {
-				font-size: 13px;
-				text-decoration: none;
-			}
-		}
-		.description {
-			font-size: 13px;
-			color: #999;
-		}
-	}
-
-	.accident {
-		.signal {
-			background-color: $accidents;
-		}
-	}
-
-	.breakdown {
-		.signal {
-			background-color: $breakdowns;
-		}
-	}
-
-	.assault {
-		.signal {
-			background-color: $assaults;
-		}
-	}
-
-	.theft {
-		.signal {
-			background-color: $thefts;
-		}
-	}
-}
-
-// Colors
-
-.red {
-	color: #ca1e2f;
-}
-
-.green {
-	color: #008a13;
-}
-
-// Circular pictures
-
-.circle {
-	-moz-box-shadow: 0 0 8px #A7BDFF;
-	-webkit-box-shadow: 0 0 8px #A7BDFF;
-	box-shadow: 0 0 8px #A7BDFF;
-}
-
-.circle-60 {
-	width: 60px !important;
-	height: 60px !important;
-	border-radius: 30px;
-	-webkit-border-radius: 30px;
-	-moz-border-radius: 30px;
-}
-
-.circle-80 {
-	width: 80px !important;
-	height: 80px !important;
-	border-radius: 40px;
-	-webkit-border-radius: 40px;
-	-moz-border-radius: 40px;
-}
-
-.circle:hover {
-	-moz-box-shadow: 0 0 8px #FF6800;
-	-webkit-box-shadow: 0 0 8px #FF6800;
-	box-shadow: 0 0 8px #FF6800;
-}
-
-.avatar-img-80 {
-	width: 80px;
-	height: 80px;
-
-	border-radius: 40px;
-	-webkit-border-radius: 40px;
-	-moz-border-radius: 40px;
-	
-	i {
-		margin-top: 19%;
-		font-size: 50px;
-	}
-}
-
-.avatar-img-60 {
-	width: 60px;
-	height: 60px;
-
-	border-radius: 30px;
-	-webkit-border-radius: 30px;
-	-moz-border-radius: 30px;
-	
-	i {
-		margin-top: 9%;
-		font-size: 45px;
-	}
-}
-
-.avatar-img {
-	background-color: #A8C9E5;
-	border: 0.5px solid #A8C9E5;
-	i {
-		display: block;
-		color: #EAF6F8;
-	}
-	
-	i.icon-plus {
-		margin-top: 23%;
-	}
-	
-	a {
-		text-decoration: none;
-	}
-}
-
-.avatar-img:hover {
-	border: 0.5px solid #FBFFF5;
-	-moz-box-shadow: 0 0 8px #C3BFC2;
-	-webkit-box-shadow: 0 0 8px #C3BFC2;
-	box-shadow: 0 0 8px #C3BFC2;
-}
-
-// Spinloaders
-
-.spinner-container {
-	display: none;
-}
-
-.spinner-mini {
-	position:relative;
-	width:15px !important;
-	height:19px !important;
-	margin-right: 5px;
-}
-
-.blockG{
-position:absolute;
-background-color:#FFFFFF;
-width:2px;
-height:6px;
--moz-border-radius:2px 2px 0 0;
--moz-transform:scale(0.4);
--moz-animation-name:fadeG;
--moz-animation-duration:1.04s;
--moz-animation-iteration-count:infinite;
--moz-animation-direction:linear;
--webkit-border-radius:2px 2px 0 0;
--webkit-transform:scale(0.4);
--webkit-animation-name:fadeG;
--webkit-animation-duration:1.04s;
--webkit-animation-iteration-count:infinite;
--webkit-animation-direction:linear;
--ms-border-radius:2px 2px 0 0;
--ms-transform:scale(0.4);
--ms-animation-name:fadeG;
--ms-animation-duration:1.04s;
--ms-animation-iteration-count:infinite;
--ms-animation-direction:linear;
--o-border-radius:2px 2px 0 0;
--o-transform:scale(0.4);
--o-animation-name:fadeG;
--o-animation-duration:1.04s;
--o-animation-iteration-count:infinite;
--o-animation-direction:linear;
-border-radius:2px 2px 0 0;
-transform:scale(0.4);
-animation-name:fadeG;
-animation-duration:1.04s;
-animation-iteration-count:infinite;
-animation-direction:linear;
-}
-
-#rotateG_01{
-left:0;
-top:7px;
--moz-animation-delay:0.39s;
--moz-transform:rotate(-90deg);
--webkit-animation-delay:0.39s;
--webkit-transform:rotate(-90deg);
--ms-animation-delay:0.39s;
--ms-transform:rotate(-90deg);
--o-animation-delay:0.39s;
--o-transform:rotate(-90deg);
-animation-delay:0.39s;
-transform:rotate(-90deg);
-}
-
-#rotateG_02{
-left:2px;
-top:2px;
--moz-animation-delay:0.52s;
--moz-transform:rotate(-45deg);
--webkit-animation-delay:0.52s;
--webkit-transform:rotate(-45deg);
--ms-animation-delay:0.52s;
--ms-transform:rotate(-45deg);
--o-animation-delay:0.52s;
--o-transform:rotate(-45deg);
-animation-delay:0.52s;
-transform:rotate(-45deg);
-}
-
-#rotateG_03{
-left:6px;
-top:1px;
--moz-animation-delay:0.65s;
--moz-transform:rotate(0deg);
--webkit-animation-delay:0.65s;
--webkit-transform:rotate(0deg);
--ms-animation-delay:0.65s;
--ms-transform:rotate(0deg);
--o-animation-delay:0.65s;
--o-transform:rotate(0deg);
-animation-delay:0.65s;
-transform:rotate(0deg);
-}
-
-#rotateG_04{
-right:2px;
-top:2px;
--moz-animation-delay:0.78s;
--moz-transform:rotate(45deg);
--webkit-animation-delay:0.78s;
--webkit-transform:rotate(45deg);
--ms-animation-delay:0.78s;
--ms-transform:rotate(45deg);
--o-animation-delay:0.78s;
--o-transform:rotate(45deg);
-animation-delay:0.78s;
-transform:rotate(45deg);
-}
-
-#rotateG_05{
-right:0;
-top:7px;
--moz-animation-delay:0.9099999999999999s;
--moz-transform:rotate(90deg);
--webkit-animation-delay:0.9099999999999999s;
--webkit-transform:rotate(90deg);
--ms-animation-delay:0.9099999999999999s;
--ms-transform:rotate(90deg);
--o-animation-delay:0.9099999999999999s;
--o-transform:rotate(90deg);
-animation-delay:0.9099999999999999s;
-transform:rotate(90deg);
-}
-
-#rotateG_06{
-right:2px;
-bottom:2px;
--moz-animation-delay:1.04s;
--moz-transform:rotate(135deg);
--webkit-animation-delay:1.04s;
--webkit-transform:rotate(135deg);
--ms-animation-delay:1.04s;
--ms-transform:rotate(135deg);
--o-animation-delay:1.04s;
--o-transform:rotate(135deg);
-animation-delay:1.04s;
-transform:rotate(135deg);
-}
-
-#rotateG_07{
-bottom:0;
-left:6px;
--moz-animation-delay:1.1700000000000002s;
--moz-transform:rotate(180deg);
--webkit-animation-delay:1.1700000000000002s;
--webkit-transform:rotate(180deg);
--ms-animation-delay:1.1700000000000002s;
--ms-transform:rotate(180deg);
--o-animation-delay:1.1700000000000002s;
--o-transform:rotate(180deg);
-animation-delay:1.1700000000000002s;
-transform:rotate(180deg);
-}
-
-#rotateG_08{
-left:2px;
-bottom:2px;
--moz-animation-delay:1.3s;
--moz-transform:rotate(-135deg);
--webkit-animation-delay:1.3s;
--webkit-transform:rotate(-135deg);
--ms-animation-delay:1.3s;
--ms-transform:rotate(-135deg);
--o-animation-delay:1.3s;
--o-transform:rotate(-135deg);
-animation-delay:1.3s;
-transform:rotate(-135deg);
-}
-
-@-moz-keyframes fadeG{
-0%{
-background-color:#20365C}
-
-100%{
-background-color:#FFFFFF}
-
-}
-
-@-webkit-keyframes fadeG{
-0%{
-background-color:#20365C}
-
-100%{
-background-color:#FFFFFF}
-
-}
-
-@-ms-keyframes fadeG{
-0%{
-background-color:#20365C}
-
-100%{
-background-color:#FFFFFF}
-
-}
-
-@-o-keyframes fadeG{
-0%{
-background-color:#20365C}
-
-100%{
-background-color:#FFFFFF}
-
-}
-
-@keyframes fadeG{
-0%{
-background-color:#20365C}
-
-100%{
-background-color:#FFFFFF}
-
+form li {
+	margin-left: 20px;
 }
