--- a/app/views/cycling_groups/_form.html.erb
+++ b/app/views/cycling_groups/_form.html.erb
@@ -1,3 +1,5 @@
+<%= render :partial => 'shared/form_errors', :locals => {:object => cycling_group, :message => t('cycling_groups.views.form.commit.failure') } %>
+
 <div class="altering-cycling_group">
 	<br/>		
 	<div class="row-fluid">
