--- a/app/views/layouts/shared/_navbar.html.erb
+++ b/app/views/layouts/shared/_navbar.html.erb
@@ -26,22 +26,7 @@
 						<li class="<%= is_section_active?('maps') %>"><%= link_to 'El Wiki', maps_path %></li>
 						<li class="<%= 'active' if controller.controller_name.eql?('bikes') %>"><%= link_to 'Bicis y Más', bikes_path %></li>
 						<% end %>
-						<% if user_signed_in? %>
-							<li class="user-logged-in dropdown">
-								<%= link_to "<i class='icon-chevron-down'></i> #{current_user.username}".html_safe, '#', :class => "dropdown-toggle", "data-toggle"=>"dropdown" %>
-								<ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-									<li><%= link_to 'Perfil', user_profile_path(current_user.username) %></li>
-									<li class="divider"></li>
-									<li><%= link_to 'Cerrar Sesión', destroy_user_session_path, :method => :delete %></li>
-						    </ul>
-							</li>
-						<% else %>
-							<li>
-								<a href="<%= new_user_session_path %>" class="login-link" type="button">
-									 <i class='icon-user'></i> Iniciar Sesión
-								</a>
-							</li>
-						<% end %>
+						<%= render 'shared/navbar_logged_in_user' %>
 					</ul>
 	      </div>
 			</div>
