Added loader spinner to main forms

--- a/app/assets/stylesheets/profiles.css.scss
+++ b/app/assets/stylesheets/profiles.css.scss
@@ -188,216 +188,6 @@
 	}
 }
 
-.not-ready-yet {
-	padding: 50px !important;
-	
-	.title {
-		font-size: 25px;
-		color: #fb4e15;
-		margin-bottom: 50px;
-	}
-	
-	.subtitle {
-		font-size: 20px;
-		margin-top: 40px;
-	}
+.separator {
+	border-top: 1px solid #FFDDB1;
 }
-
-.home {
-	margin-top: 30px;
-	.item {
-		padding: 10px;
-		background-color: #FCFFFC;
-		border: 1px solid #F2D2B7;
-		margin-top: 20px;
-		margin-bottom: 20px;
-		font-size: 12px;
-		
-		ul {
-			list-style: none;
-			text-align: right;
-			
-			li {
-				display: inline-block;
-				margin-left: 10px;
-			}
-		}
-		
-		p {
-			padding: 0px !important;
-			margin: 0px !important;
-		}
-		
-		p.extra {
-			margin-left: 15px !important;
-			padding-left: 10px !important;
-			border-left: 5px solid #DAEAF5;
-		}
-		
-		.main {
-			margin-top: 6px;
-			
-			.category {
-				font-weight: bold;
-				color: #4B4B4B;
-				text-transform: uppercase;
-			}
-			
-			.danger {
-				color: #C30000;
-			}
-			
-			.sightseeing {
-				color: green;
-			}
-			
-			.accident {
-				color: #990000;
-			}
-			
-			.theft {
-				color: #570ed1;
-			}
-			
-			.assault {
-				color: #767279;
-			}
-			
-			.breakdown {
-				color: #FF5200;
-			}
-			
-			.alert {
-				color: #F8B400;
-				background: none;
-				border: none;
-			}
-			
-			.workshop {
-				color: #2D5BC2;
-			}
-			
-			.parking {
-				color: #2D997F;
-			}
-		}
-		
-		.see-on-map {
-			margin-top: 10px !important;
-		}
-		
-		.picture p {
-			margin-top: 3px !important;
-		}
-
-	}
-	
-	p.city {
-		font-size:11px;
-		font-style: italic;
-	}
-}
-
-.profile {	
-	.add-user-icon {
-		display: none;
-	}
-	
-	.instruction {
-		font-size: 11px;
-		margin-top: 5px;
-	}
-	
-	.menu {
-		margin-top: 20px;
-	}
-	
-	h3 {
-		color: #F15000 !important;
-	}
-	
-	.activities {
-		margin-top: 20px !important;
-		background-color: white;
-		padding: 10px;
-		color: #A7C3F9;
-		-moz-box-shadow: 0 0 1px #A5A5A5;
-		-webkit-box-shadow: 0 0 1px #A5A5A5;
-		box-shadow: 0 0 1px #A5A5A5;
-		
-		li:hover, .active {
-			a {
-				opacity: 1 !important;
-				color: #FF4B02;
-			}
-		}
-		
-		ul {
-			display: inline-block;
-		}
-		
-		ul li, ul li div {
-			display: inline-block;
-			list-style: none;
-		}
-		
-		ul.stats {
-			background-color: #E9F2FF;
-			vertical-align: 40%;
-			margin-right: 30px;
-			padding-left: 10px;
-			padding-right: 10px;
-			li {
-				padding: 15px 10px 7px 10px;
-				a p {
-					padding: 0px;
-					margin: 0px;
-				}
-				
-				a:hover {
-					text-decoration: none;
-				}
-			
-				.number {
-					font-size: 25px;
-					color: #FF6800;
-				}
-			
-				.details {
-					text-transform: uppercase;
-					color: #003AFF;
-					font-size: 11px;
-				}
-			}
-		}
-		
-		ul.actions li {
-			width: 100px;
-		}
-		
-		ul li a:hover {
-			color: #FF6400;
-		}
-		
-		ul.actions li a {
-			opacity: 0.5;
-			text-decoration: none;
-			
-			.title {
-				font-size: 11px;
-				text-transform: uppercase;
-				display: block;
-			}
-			
-			.description {
-				font-size: 10px;
-			}
-		}
-	}
-	
-	p {
-		margin:0;
-		padding: 0;
-	}
-}
-
