--- a/app/views/cycling_groups/_form.html.erb
+++ b/app/views/cycling_groups/_form.html.erb
@@ -163,7 +163,8 @@
 	<div class="row-fluid">
 		<div class="span12">
 			<div class="centered-text">
-				<%= f.submit t('actions.save'), :class => "btn btn-large btn-success" %>
+				<%= f.submit t('actions.save'), :class => "btn btn-large btn-success submitter"  %>
+				<%= image_tag('mini_spinner.gif', :class => "spinner") %>
 			</div>
 		</div>
 	</div>
